pkg/gen/examples/invalid/noncontinuous2/enum.go
package noninteger

//go:enumer
type NonContinuous uint

const (
	NonContinuousA NonContinuous = iota
	_
	NonContinuousB
)
